--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,2 +1,10 @@
-<span class="material-icons">flutter_dash</span> Hello Pigeons!
-
+<p>
+    Altough the phrase is considered obsolete, in the late 18th and 19th centuries, milking pigeons was commonly known as attemping the impossible. As a matter of fact, both male and female pigeons (regarded as the most intelligent of all birds) do produce crop milk for the nourishment of their squabs. In other words, it is NOT impossible.
+</p>
+<p>
+    Are you ready to attempt the pigeon milking challenge?
+    <hr />
+    <div>
+        <a href="#">Start the Challenge</a></div>
+    <hr />
+</p>
