--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <!-- client css -->
     <link href="/css/client.css" rel="stylesheet">
     <!-- favicon -->
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="/favicon.png">
 </head>
 <body>
     
